# thermostazv2

./: .justfile  .pre-commit-config.yaml  Cargo.toml  Embed.toml  README.md  bacon.toml  test.py
.cargo/: config.toml
conf/: 99-sheusrb.rules  99-thermostazv2.rules  thermostazv2.service
fw/src/: data.rs  main.rs
sheusrb-drv/: Cargo.toml
sheusrb-drv/src/: main.rs
sheusrb-fw/: Cargo.toml  README.md
sheusrb-fw/.cargo/: config
sheusrb-fw/src/: main.rs
sheusrb-lib/: Cargo.toml
sheusrb-lib/src/: lib.rs
src/: main.rs
thermostazv2-drv/: Cargo.toml  bacon.toml
thermostazv2-drv/src/: err.rs  main.rs  sercon.rs  status.rs  tasks.rs  thermostazv.rs
thermostazv2-esp32/: Cargo.toml
thermostazv2-esp32/.cargo/: config.toml
thermostazv2-esp32/src/: main.rs
thermostazv2-fw/: Cargo.toml  bacon.toml
thermostazv2-fw/src/: aht20rtic.rs  main.rs
thermostazv2-lib/: Cargo.toml
thermostazv2-lib/src/: lib.rs
thermostazv2-stm32/: Cargo.toml
thermostazv2-stm32/src/: main.rs
