[package]
name = "sheusrb-drv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc", default-features = false, features = ["derive"] }
serialport = "4.2.0"
sheusrb-lib = { path = "../sheusrb-lib" }
