[package]
name = "thermostazv2-drv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-channel = "1.7.1"
bincode = { version = "2.0.0-rc", default-features = false, features = ["derive"] }
bytes = "1.2.1"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive", "env"] }
crossbeam-channel = { version = "0.5.6", features = ["crossbeam-utils"] }
crossbeam-utils = "0.8.12"
directories = "4.0.1"
futures = "0.3.25"
futures-util = "0.3.25"
influxdb2 = "0.3.3"
rumqttc = "0.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.87"
serialport = "4.2.0"
thermostazv2-lib = { path = "../thermostazv2-lib" }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["tokio-util"] }
tokio-util = { version = "0.7.4", features = ["full"] }
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
