[package]
name = "thermostazv2-esp32"
version = "0.1.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.7.0"
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.1", features = ["esp32c3"] }
critical-section = "1.1.1"
static_cell = "1.0.0"
esp-hal-common = { version = "0.7.1", features = ["esp32c3", "embassy", "embassy-time-timg0"] }
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
