[package]
name = "thermostazv2-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7.16"
postcard = { version = "1.0.4", features = ["postcard-derive", "experimental-derive"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
